--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,11 +9,16 @@ jobs:
       - uses: actions/setup-node@v3
         with:
           node-version: "lts/*"
+          cache: "npm"
       - run: echo '::set-output name=NODE_VERSION::$(node -v)'
         id: get-node-version
       - uses: actions/cache@v3
         with:
-          path: "node_modules"
+          path: node_modules
           key: ${{ runner.os }}-${steps.get-node-version.outputs.NODE_VERSIOn}-${{ hashFiles('package-lock.json') }}
-      - run: npm ci
+      - shell: bash
+        run: |
+          if [[ -d node_modules ]]; then
+            npm ci
+          fi
       - run: npm run build
