--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,9 +19,5 @@ jobs:
           path: node_modules
           key: ${{ runner.os }}-${steps.get-node-version.outputs.NODE_VERSIOn}-${{ hashFiles('package-lock.json') }}
       - shell: bash
-        run: |
-          ls -la
-          if [[ -d node_modules ]]; then
-            npm ci
-          fi
+        run: if [[ ! -d node_modules ]]; then npm ci ; fi
       - run: npm run build
