--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,4 +20,9 @@ jobs:
           key: ${{ runner.os }}-${steps.get-node-version.outputs.NODE_VERSIOn}-${{ hashFiles('package-lock.json') }}
       - shell: bash
         run: if [[ ! -d node_modules ]]; then npm ci ; fi
+      - uses: actions/cache@v2
+        with:
+          path: ${{ github.workspace }}/.next/cache
+          key: ${{ runner.os }}-nextjs-${{ hashFiles('**/package-lock.json') }}-${{ hashFiles('**.[jt]s', '**.[jt]sx') }}
+          restore-keys: ${{ runner.os }}-nextjs-${{ hashFiles('**/package-lock.json') }}-
       - run: npm run build
