--- a/package.json
+++ b/package.json
@@ -1,7 +1,11 @@
 {
   "scripts": {
     "dev": "next dev",
-    "build": "next build"
+    "build": "next build",
+    "test": "jest --watch",
+    "test:ci": "jest --ci",
+    "lint": "next lint",
+    "typecheck": "tsc --noEmit"
   },
   "dependencies": {
     "next": "^12.1.4",
@@ -11,9 +15,13 @@
     "uuid": "^8.3.2"
   },
   "devDependencies": {
+    "@types/jest": "^27.4.1",
     "@types/node": "^17.0.23",
     "@types/react": "^18.0.0",
     "@types/uuid": "^8.3.4",
+    "eslint": "8.13.0",
+    "eslint-config-next": "12.1.4",
+    "jest": "^27.5.1",
     "typescript": "^4.6.3"
   }
 }
